responsive design implemented

--- a/src/index.css
+++ b/src/index.css
@@ -9,13 +9,16 @@ body {
 *{
   box-sizing: border-box;
 }
-#root{
-  background-color: #e5e5e5;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+@media screen and (min-width: 900px) {
+  #root{
+    background-color: #e5e5e5;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
