--- a/src/components/Buttons.css
+++ b/src/components/Buttons.css
@@ -1,3 +1,20 @@
+#screen{
+    height: 100px;
+    width: 100%;
+    border: 1px solid;
+    border-radius: 10px;
+    padding: 10px;
+    background-color: #f4a261;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    font-size: 50px;
+    overflow: hidden;
+}
+.container{
+    padding: 10px;
+}
+
 [id^="button"]{
     width: 50px;
     height: 50px;
@@ -47,4 +64,34 @@
     display: flex;
     align-content: space-between;
     flex-wrap: wrap;
+}
+
+@media screen and (min-width: 300px) and (max-width: 900px) {
+    .container{
+        width: 100vw;
+        height: 100vh;
+        justify-content: flex-start;
+        box-sizing: border-box;
+    }
+    #screen{
+        height: 200px; 
+        font-size: 75px;
+    }
+    .button-container{
+        margin-top: 20px;
+        flex-direction: column-reverse;
+        justify-content: start;
+    }
+    #functional-buttons{
+        height: 100px;
+        width: 95vw;
+        justify-content: space-around;
+        flex-wrap: nowrap;
+        padding: 10px;
+        align-items: center;
+
+    }
+    .buttons{
+        width: 100vw;
+    }
 }
